protocol changes, database added

--- a/development.ini
+++ b/development.ini
@@ -18,6 +18,8 @@ pyramid.includes =
 # '127.0.0.1' and '::1'.
 debugtoolbar.hosts = 127.0.0.1 ::1 192.168.2.18
 
+sqlalchemy.url = sqlite:///%(here)s/sqltutorial.sqlite
+
 ###
 # wsgi server configuration
 ###
@@ -33,7 +35,7 @@ port = 6543
 ###
 
 [loggers]
-keys = root, hallled
+keys = root, hallled, sqlalchemy.engine.base.Engine
 
 [handlers]
 keys = console
@@ -49,6 +51,11 @@ handlers = console
 level = DEBUG
 handlers =
 qualname = hallled
+
+[logger_sqlalchemy.engine.base.Engine]
+level = INFO
+handlers =
+qualname = sqlalchemy.engine.base.Engine
 
 [handler_console]
 class = StreamHandler
